# conservation_tracking_pipeline

./: .gitignore  CMakeLists.txt  N2DL-HeLa-01.sh  README.md  debian_install_instructions.txt  h5_tracking.cxx  main.cxx  main3D.cxx  main3d.cxx  struct-learning-howto.txt  test_feature_calculators.cxx  test_mask_traxels.cxx  tracking.cxx  tracking3d.cxx
SW/: N2D-SIM-01.sh  N2D-SIM-02.sh  N2D-SIM-03.sh  N2D-SIM-04.sh  N2D-SIM-05.sh  N2D-SIM-06.sh  N2DL-HeLa-01.sh  N2DL-HeLa-02.sh
SW/dependencies/: config_file_description.txt
SW/dependencies/N2D-SIM/: N2D-SIM_01-02-03-04-05-06_config.txt  N2D-SIM_01-02-03-04-05-06_region_features.txt
SW/dependencies/N2DL-HeLa/: N2DL-HeLa_01-02_config.txt  N2DL-HeLa_01-02_features.txt
SW/dependencies/N3D-SIM/: N3D-SIM_01-02-03-04_config.txt
cmake_extensions/: FindPGMLINK.cmake  FindVIGRA.cmake
dependencies/N2D-HeLa/: N2D-HeLa_01-02_classifier.h5
dependencies/N2D-SIM/: N2D-SIM_01-02-03-04-05-06_classifier.h5
dependencies/N3D-SIM/: N3D-SIM_01-02-03-04_config.txt
include/: common.h  division_feature_extractor.hxx  lineage.hxx  pipeline_helpers.hxx  segmentation.hxx  traxel_extractor.hxx  workflow.hxx
scripts/: compareResults.py  convertTiffToRGBPng.py  convertToStack.py  extractLabelsFromILP.py  ilpToPipelineConfig.py  parameterGridSearch.py  plot_tracks.py  run_sequence.sh  stack2ilastikTXY_normalized.py  writeLabelsToILP.py
src/: division_feature_extractor.cxx  lineage.cxx  pipeline_helpers.cxx  segmentation.cxx  traxel_extractor.cxx  workflow.cxx
tools/: expand_z_scale.cxx
